--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,52 @@
-name: Deploy weat-analyze-api
+name: CI/CD for weat-analyze-api
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "develop"]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          python-version: '3.11'
 
-      - name: Build and Push Docker image
+      - name: Install dependencies
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/weat-analyze-api:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/weat-analyze-api:latest
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Deploy to Ncloud Server
-        uses: appleboy/ssh-action@v0.1.10
+      - name: Fetch .env file from private repo
+        run: |
+          curl -H "Authorization: token ${{ secrets.PRIVATE_GH_PAT }}" \
+            -H "Accept: application/vnd.github.v3.raw" \
+            -o .env \
+            ${{ secrets.PRIVATE_GH }}
+
+      - name: Build Docker image
+        run: |
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest .
+
+      - name: Login to Docker registry
+        run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} --password-stdin
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest
+
+      - name: Deploy on server
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/weat-analyze-api:latest
-            docker stop weat-analyze-api || true
-            docker rm weat-analyze-api || true
-            docker run -d --name weat-analyze-api -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/weat-analyze-api:latest
+            docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+            docker pull ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest
+            docker stop emotion-weather-fastapi || true
+            docker rm emotion-weather-fastapi || true
+            docker run -d --name emotion-weather-fastapi -p 8000:8000 --env-file .env ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest
