--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,22 +21,22 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Fetch .env file from private repo
-        run: |
-          curl -H "Authorization: token ${{ secrets.PRIVATE_GH_PAT }}" \
-            -H "Accept: application/vnd.github.v3.raw" \
-            -o .env \
-            ${{ secrets.PRIVATE_GH }}
+      # - name: Fetch .env file from private repo
+      #   run: |
+      #     curl -H "Authorization: token ${{ secrets.PRIVATE_GH_PAT }}" \
+      #       -H "Accept: application/vnd.github.v3.raw" \
+      #       -o .env \
+      #       ${{ secrets.PRIVATE_GH }}
 
       - name: Build Docker image
         run: |
-          docker build -f Dockerfile -t ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest .
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_REGISTRY_URL }}/weat-analyze-api:latest .
 
       - name: Login to Docker registry
         run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} --password-stdin
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest
+        run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/weat-analyze-api:latest
 
       - name: Deploy on server
         uses: appleboy/ssh-action@master
@@ -45,8 +45,13 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            curl -H "Authorization: token ${{ secrets.PRIVATE_GH_PAT }}" \
+            -H "Accept: application/vnd.github.v3.raw" \
+            -o .env \
+            ${{ secrets.PRIVATE_GH }}
+
             docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-            docker pull ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest
-            docker stop emotion-weather-fastapi || true
-            docker rm emotion-weather-fastapi || true
-            docker run -d --name emotion-weather-fastapi -p 8000:8000 --env-file .env ${{ secrets.DOCKER_REGISTRY_URL }}/emotion-weather-fastapi:latest
+            docker pull ${{ secrets.DOCKER_REGISTRY_URL }}/weat-analyze-api:latest
+            docker stop weat-analyze-api || true
+            docker rm weat-analyze-api || true
+            docker run -d --name weat-analyze-api -p 8000:8000 --env-file .env ${{ secrets.DOCKER_REGISTRY_URL }}/weat-analyze-api:latest
