--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ filelock==3.18.0
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.27.0
 idna==3.10
 importlib_metadata==8.6.1
 installer==0.7.0
@@ -43,6 +45,7 @@ poetry==1.8.5
 poetry-core==1.9.1
 poetry-plugin-export==1.8.0
 protobuf==5.29.4
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pyarrow==19.0.1
 pycparser==2.22
@@ -51,6 +54,7 @@ pydantic_core==2.33.2
 pydeck==0.9.1
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.2
 RapidFuzz==3.12.2
 referencing==0.36.2
@@ -61,6 +65,7 @@ shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.42
 starlette==0.47.2
 streamlit==1.44.1
 tenacity==9.1.2
@@ -74,7 +79,5 @@ tzdata==2025.2
 urllib3==2.3.0
 uvicorn==0.35.0
 virtualenv==20.29.3
-# xattr==1.1.4
+xattr==1.1.4
 zipp==3.21.0
-python-dotenv==1.0.1
-httpx==0.27.0
